@@ -1,2 +1,3 @@
 web: bundle exec unicorn_rails -p $PORT
 check_worker: bundle exec rake run_checker_job
+cache_updater: bundle exec rake run_cache_updater
