@@ -1,14 +1,14 @@
 - context_bar do
   .breadcrumbs
     != breadcrumbs ['Contents', sources_path], @source, @source_division
-    != completion_rate @source_division.aggregate_status
+    != completion_rate @source_division.cached_status_tag
   .resources
     != link_to_resources @source_division, :edit, :previous, :next
   %p
     - if @source_division.aligned_source_division
       != link_to 'Show sentence alignments', alignment_path(@source_division)
 
-    - if @source_division.has_discourse_annotation?
+    - if @source_division.cached_has_discourse_annotation?
       != link_to 'Show discourse annotations', source_division_discourse_path(@source_division)
 
     %a{:href => '#', :id => 'toggle-sentence-status'}
