@@ -39,6 +39,7 @@ module Proiel
 
   module Jobs
     autoload :Job, 'jobs'
+    autoload :CacheUpdater, 'jobs/cache_updater'
     autoload :DatabaseChecker, 'jobs/database_checker'
     autoload :DatabaseValidator, 'jobs/database_validator'
     autoload :AnnotationValidator, 'jobs/annotation_validator'
